--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     },
     "dependencies": {
         "@inertiajs/react": "^1.0.0",
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-navigation-menu": "^1.1.4",
-        "@radix-ui/react-separator": "^1.0.3",
-        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.1.12",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "lucide-react": "^0.294.0",
