--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.1",
         "@inertiajs/react": "^1.0.0",
         "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-navigation-menu": "^1.1.4",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-separator": "^1.1.7",
@@ -29,6 +32,8 @@
         "lucide-react": "^0.294.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwind-merge": "^2.0.0"
+        "react-hook-form": "^7.62.0",
+        "tailwind-merge": "^2.0.0",
+        "zod": "^4.0.17"
     }
 }
