--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-navigation-menu": "^1.1.4",
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.12",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.294.0",
         "react": "^18.2.0",
+        "react-day-picker": "^9.8.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.62.0",
         "tailwind-merge": "^2.0.0",
