--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-day-picker": "^9.8.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.62.0",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^2.0.0",
         "zod": "^4.0.17"
     }
